--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,9 @@
 body   {
    background-color: #8fbc8f;
-
+font-family: Copperplate,"Copperplate Gothic Light",fantasy
 }
-
 h1 {
+font-family: 'Kaushan Script', cursive;
   color: #414141 ;
 }
 
